[JBIDE-12923] fixed parsing of connection-url when loading it from preferences. URI gets confused by empty host name (returns null username), URL allows empty host name.
git-svn-id: http://svn.jboss.org/repos/jbosstools/branches/jbosstools-4.0.0.Beta1@44610 a97e2381-89e5-4abb-bab3-167db6db766c